상품정보 작업 완료

--- a/product_information.html
+++ b/product_information.html
@@ -225,8 +225,110 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <p style="letter-spacing: -2px;">*식품첨가물 정보는 상품에 표시된 순서대로 기재되어 있습니다.</p>
-                        <p style="letter-spacing: -2px;">*식품첨가물은 각 상품마다 함량과 배합방식에 따라 다르게 적용될 수 있습니다.</p>
+                        <p class="with_reference">*식품첨가물 정보는 상품에 표시된 순서대로 기재되어 있습니다.</p>
+                        <p class="with_reference">*식품첨가물은 각 상품마다 함량과 배합방식에 따라 다르게 적용될 수 있습니다.</p>
+                    </div>
+                </div>
+                <div class="materials">
+                    <p class="title"><i class="fas fa-utensils"></i>일반 원재료</p>
+                    <div class="content">
+                        <p>동물성단백질프리믹스, 건조소고기분말, 건조연어살코기분말, 유기농쌀, 유기농옥수수글루텐,
+                            정제계유, 유기농옥수수, 유기농현미, 동물성단백질프리믹스, 건조소고기분말, 건조연어살코기분말, 유기농쌀, 유기농옥수수글루텐,
+                            정제계유, 유기농옥수수, 유기농현미
+                        </p>
+                    </div>
+                    <p class="with_reference">*원재료 데이터는 최신정보가 아니거나 오류가 발생할 수 있으니 구매 전 제조원 및 유통판매원이 표시한 원재료를 한번 더 확인하시기 바랍니다.</p>
+                </div>
+                <div class="nutrient_composition">
+                    <p class="title"><i class="fas fa-chart-pie"></i>영양성분 구성 비율</p>
+                    <div class="guideline_filter">
+                        <span style="line-height: 21px; color: #E95468;">*AAFCO 가이드라인 필터를 적용해보세요</span>
+                        <div class="filter_btn">
+                            <span class="select">
+                                성장/임신기
+                            </span>
+                            <span class="">
+                                성견
+                            </span>
+                        </div>
+                    </div>
+                    <div class="nutrient_table">
+                        <table class="flat-table flat-table-1">
+                            <thead>
+                                <th></th>
+                                <th>수분포함</th>
+                                <th>수분제외</th>
+                                <th colspan="2" style="border-right: none;">AAFCO 가이드라인</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>조단백</td>
+                                    <td>26%</td>
+                                    <td class="nutrient_table_bgc_red">29.2%</td>
+                                    <td class="nutrient_table_bgc_red">최소 18.0%</td>
+                                    <td class="nutrient_table_bgc_red text_green2">충족</td>
+                                </tr>
+                                <tr>
+                                    <td>조지방</td>
+                                    <td>26%</td>
+                                    <td class="nutrient_table_bgc_red">29.2%</td>
+                                    <td class="nutrient_table_bgc_red">최소 18.0%</td>
+                                    <td class="nutrient_table_bgc_red text_green2">충족</td>
+                                </tr>
+                                <tr>
+                                    <td>칼슘</td>
+                                    <td>26%</td>
+                                    <td class="nutrient_table_bgc_red">29.2%</td>
+                                    <td class="nutrient_table_bgc_red">최소 18.0%</td>
+                                    <td class="nutrient_table_bgc_red text_green2">충족</td>
+                                </tr>
+                                <tr>
+                                    <td>인</td>
+                                    <td>26%</td>
+                                    <td class="nutrient_table_bgc_red">29.2%</td>
+                                    <td class="nutrient_table_bgc_red">최소 18.0%</td>
+                                    <td class="nutrient_table_bgc_red text_green2">충족</td>
+                                </tr>
+                                <tr>
+                                    <td>조섬유</td>
+                                    <td>26%</td>
+                                    <td>29.2%</td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>조회분</td>
+                                    <td>26%</td>
+                                    <td>29.2%</td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>수분</td>
+                                    <td>26%</td>
+                                    <td>-</td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <p class="with_reference">*AAFCO 가이드라인: 미국영양관리협회에서 수분 0% 를 기준으로 제시하는 영양 가이드라인 입니다. 이 가이드 라인을 충족했다는 것은 반려동물에게 필요한 최소한의 영양학적 밸런스를 맞췄다는 것을 의미합니다. 수분제외 함량과 AAFCO 가이드라인을 비교해보세요.</p>
+                </div>
+                <div class="last_updated">
+                    <div class="title">
+                        <p>식품 정보 최종 업데이트</p>
+                        <span class="update">2019-05-03 <i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                    </div>
+                    <div class="last_updated_box">
+                        <div class="title">
+                            <p>식품 정보 최종 업데이트</p>
+                            <span class="date">2019-05-03</span>
+                        </div>
+                        <div class="title">
+                            <p>영양성분분석 정보</p>
+                            <span class="date">2019-03-03</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -257,6 +359,19 @@
                 $(".view_all_link").find(">i").attr("class", "fa fa-angle-up");
                 $(".view_all_link").find(".ir_no").attr("style", "display:inline-block;");
                 $(".view_all_link").find(".ir_su").attr("style", "display:none;");
+            }
+        });
+        //접기/펼치기
+        $(".update").click(function (e) {
+            e.preventDefault();
+            $(".last_updated_box").slideToggle();
+            $(".update").toggleClass("open");
+            if ($(".update").hasClass("open")) {
+                //open이 있을 때
+                $(".update").find(">i").attr("class", "fa fa-angle-down");
+            } else {
+                //open이 없을 때
+                $(".update").find(">i").attr("class", "fa fa-angle-up");
             }
         });
     </script>
