--- a/foodtalk.html
+++ b/foodtalk.html
@@ -231,6 +231,90 @@
                             <span class="user_best_comment ellipsis">영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.</span>
                         </div>
                     </div>
+                    <div class="comments clearfix">
+                        <div class="user_img_box clearfix">
+                            <span class="user_img">
+                                <img src="/img/top_1.jpg" alt="">
+                                <span>BEST</span>
+                            </span>
+                        </div>
+                        <div class="user_comment ellipsis">
+                            <p class="user_name">
+                                나도남매맘
+                            </p>
+                            <p class="species">30대/고양이</p>
+                            <div class="starRev">
+                                <span class="starR on">★</span>
+                                <span class="starR on">★</span>
+                                <span class="starR on">★</span>
+                                <span class="starR">★</span>
+                                <span class="starR">★</span>
+                                <div class="comment_repurchase">
+                                    <span>/</span>
+                                    <span class="title">재구매 의사</span>
+                                    <span class="comment_to_buy">있어요</span>
+                                    <span class="comment_no_intention disable">없어요</span>
+                                </div>
+                            </div>
+                            <span class="user_best_comment ellipsis">영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.</span>
+                        </div>
+                    </div>
+                    <div class="comments clearfix">
+                        <div class="user_img_box clearfix">
+                            <span class="user_img">
+                                <img src="/img/top_1.jpg" alt="">
+                                <span>BEST</span>
+                            </span>
+                        </div>
+                        <div class="user_comment ellipsis">
+                            <p class="user_name">
+                                나도남매맘
+                            </p>
+                            <p class="species">30대/고양이</p>
+                            <div class="starRev">
+                                <span class="starR on">★</span>
+                                <span class="starR on">★</span>
+                                <span class="starR on">★</span>
+                                <span class="starR">★</span>
+                                <span class="starR">★</span>
+                                <div class="comment_repurchase">
+                                    <span>/</span>
+                                    <span class="title">재구매 의사</span>
+                                    <span class="comment_to_buy">있어요</span>
+                                    <span class="comment_no_intention disable">없어요</span>
+                                </div>
+                            </div>
+                            <span class="user_best_comment ellipsis">영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.</span>
+                        </div>
+                    </div>
+                    <div class="comments clearfix">
+                        <div class="user_img_box clearfix">
+                            <span class="user_img">
+                                <img src="/img/top_1.jpg" alt="">
+                                <span>BEST</span>
+                            </span>
+                        </div>
+                        <div class="user_comment ellipsis">
+                            <p class="user_name">
+                                나도남매맘
+                            </p>
+                            <p class="species">30대/고양이</p>
+                            <div class="starRev">
+                                <span class="starR on">★</span>
+                                <span class="starR on">★</span>
+                                <span class="starR on">★</span>
+                                <span class="starR">★</span>
+                                <span class="starR">★</span>
+                                <div class="comment_repurchase">
+                                    <span>/</span>
+                                    <span class="title">재구매 의사</span>
+                                    <span class="comment_to_buy">있어요</span>
+                                    <span class="comment_no_intention disable">없어요</span>
+                                </div>
+                            </div>
+                            <span class="user_best_comment ellipsis">영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
