푸드톡 작업중

--- a/foodtalk.html
+++ b/foodtalk.html
@@ -117,6 +117,20 @@
                                 </div>
                             </div>
                             <span class="user_best_comment ellipsis">영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.</span>
+                            <div class="date">
+                                <span class="date_content">
+                                    2018-08-20
+                                </span>
+                                <div class="like_comment">
+                                    <a href="javascript:void(0);" class="like-button">
+                                        <i class="material-icons not-liked bouncy">favorite_border</i>
+                                        <i class="material-icons is-liked bouncy">favorite</i>
+                                        <span class="like-overlay"></span>
+                                    </a>
+                                    <span class="useful">유용해요 2개</span>
+                                    <span class="comment_btn">댓글 +</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="comments clearfix">
@@ -145,6 +159,20 @@
                                 </div>
                             </div>
                             <span class="user_best_comment ellipsis">영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.</span>
+                            <div class="date">
+                                <span class="date_content">
+                                    2018-08-20
+                                </span>
+                                <div class="like_comment">
+                                    <a href="javascript:void(0);" class="like-button">
+                                        <i class="material-icons not-liked bouncy">favorite_border</i>
+                                        <i class="material-icons is-liked bouncy">favorite</i>
+                                        <span class="like-overlay"></span>
+                                    </a>
+                                    <span class="useful">유용해요 2개</span>
+                                    <span class="comment_btn">댓글 +</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="comments clearfix">
@@ -173,6 +201,20 @@
                                 </div>
                             </div>
                             <span class="user_best_comment ellipsis">영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.</span>
+                            <div class="date">
+                                <span class="date_content">
+                                    2018-08-20
+                                </span>
+                                <div class="like_comment">
+                                    <a href="javascript:void(0);" class="like-button">
+                                        <i class="material-icons not-liked bouncy">favorite_border</i>
+                                        <i class="material-icons is-liked bouncy">favorite</i>
+                                        <span class="like-overlay"></span>
+                                    </a>
+                                    <span class="useful">유용해요 2개</span>
+                                    <span class="comment_btn">댓글 +</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="comments clearfix">
@@ -201,6 +243,20 @@
                                 </div>
                             </div>
                             <span class="user_best_comment ellipsis">영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.</span>
+                            <div class="date">
+                                <span class="date_content">
+                                    2018-08-20
+                                </span>
+                                <div class="like_comment">
+                                    <a href="javascript:void(0);" class="like-button">
+                                        <i class="material-icons not-liked bouncy">favorite_border</i>
+                                        <i class="material-icons is-liked bouncy">favorite</i>
+                                        <span class="like-overlay"></span>
+                                    </a>
+                                    <span class="useful">유용해요 2개</span>
+                                    <span class="comment_btn">댓글 +</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="comments clearfix">
@@ -229,6 +285,20 @@
                                 </div>
                             </div>
                             <span class="user_best_comment ellipsis">영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.</span>
+                            <div class="date">
+                                <span class="date_content">
+                                    2018-08-20
+                                </span>
+                                <div class="like_comment">
+                                    <a href="javascript:void(0);" class="like-button">
+                                        <i class="material-icons not-liked bouncy">favorite_border</i>
+                                        <i class="material-icons is-liked bouncy">favorite</i>
+                                        <span class="like-overlay"></span>
+                                    </a>
+                                    <span class="useful">유용해요 2개</span>
+                                    <span class="comment_btn">댓글 +</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="comments clearfix">
@@ -257,6 +327,20 @@
                                 </div>
                             </div>
                             <span class="user_best_comment ellipsis">영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.</span>
+                            <div class="date">
+                                <span class="date_content">
+                                    2018-08-20
+                                </span>
+                                <div class="like_comment">
+                                    <a href="javascript:void(0);" class="like-button">
+                                        <i class="material-icons not-liked bouncy">favorite_border</i>
+                                        <i class="material-icons is-liked bouncy">favorite</i>
+                                        <span class="like-overlay"></span>
+                                    </a>
+                                    <span class="useful">유용해요 2개</span>
+                                    <span class="comment_btn">댓글 +</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="comments clearfix">
@@ -285,6 +369,20 @@
                                 </div>
                             </div>
                             <span class="user_best_comment ellipsis">영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.</span>
+                            <div class="date">
+                                <span class="date_content">
+                                    2018-08-20
+                                </span>
+                                <div class="like_comment">
+                                    <a href="javascript:void(0);" class="like-button">
+                                        <i class="material-icons not-liked bouncy">favorite_border</i>
+                                        <i class="material-icons is-liked bouncy">favorite</i>
+                                        <span class="like-overlay"></span>
+                                    </a>
+                                    <span class="useful">유용해요 2개</span>
+                                    <span class="comment_btn">댓글 +</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="comments clearfix">
@@ -313,6 +411,20 @@
                                 </div>
                             </div>
                             <span class="user_best_comment ellipsis">영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.맛있어요.영양소도좋고 맛있어요.영양소도좋고 맛있어요.</span>
+                            <div class="date">
+                                <span class="date_content">
+                                    2018-08-20
+                                </span>
+                                <div class="like_comment">
+                                    <a href="javascript:void(0);" class="like-button">
+                                        <i class="material-icons not-liked bouncy">favorite_border</i>
+                                        <i class="material-icons is-liked bouncy">favorite</i>
+                                        <span class="like-overlay"></span>
+                                    </a>
+                                    <span class="useful">유용해요 2개</span>
+                                    <span class="comment_btn">댓글 +</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -331,7 +443,6 @@
     <script>
         var menu = $("#foodtalk_navbar");
         var pos = menu.offset();
-
         $(window).scroll(function () {
             if ($(this).scrollTop() > pos.top && menu.hasClass("default")) {
                 menu.addClass("fixed");
@@ -339,6 +450,17 @@
                 menu.removeClass("fixed");
             }
         });
+        // 별평점 클릭시 on
+        // $('.starRev span').click(function () {
+        //     $(this).parent().children('span').removeClass('on');
+        //     $(this).addClass('on').prevAll('span').addClass('on');
+        //     return false;
+        // });
+        $(document).ready(function () {
+            $('.like-button').click(function () {
+                $(this).toggleClass('is-active');
+            })
+        })
     </script>
     <script>
         var swiper = new Swiper(".swiper4", {
